# winnow

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: agent-explore.yml  agent-implement-pr.yml  agent-implement.yml  agent-review.yml  agent-update-branch.yml  ci.yml
.sandcastle/: .env.example  CODING_STANDARDS.md  Dockerfile  PROJECT.md  fix.md  implement-prompt.md  implement.md  lib.ts  main.ts  plan-prompt.md  review-prompt.md  review.md  run.ts  sandcastle.config.ts  verify.md
.sandcastle/agent-workflows/explore/: explore.ts  extraction.md  prompt.md
.sandcastle/agent-workflows/implement/: implement.ts  prompt.md
.sandcastle/agent-workflows/implement-pr/: extraction.md  implement-pr.ts  prompt.md
.sandcastle/agent-workflows/review/: extraction.md  prompt.md  review.ts
.sandcastle/agent-workflows/shared/: common.ts  diff-lines.ts  (+3 more)
docs/: prd-youtube-curator.md
docs/adr/: 0001-single-process-due-check-runtime.md  0002-organic-calibration-scores-final-once-written.md  0003-flash-lite-single-model-scoring.md
docs/agents/: domain.md  triage-labels.md
docs/design/: Winnow.html
docs/research/: gemini-free-tier-rate-limits.md  transcript-fetching.md  transcript-truncation-strategy.md
packaging/: README.md  winnow.service
src/winnow/: auth.py  cli.py  db.py  feed.py  ingest.py  scheduler.py  scoring.py  sync.py  transcript.py  web.py  youtube.py
tests/: test_auth.py  test_cli.py  test_db.py  test_ingest.py  test_scheduler.py  test_scoring.py  test_sync.py  test_web.py
(+10 files in other folders)
