[project]
name = "winnow"
version = "0.1.0"
description = "Personal YouTube quality curator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.4.0",
    "jinja2>=3.1.6",
    "openai>=2.46.0",
    "uvicorn>=0.30",
    "youtube-transcript-api>=1.2.4",
]

[project.scripts]
winnow = "winnow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/winnow"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
